--- a/packages/public-client/package.json
+++ b/packages/public-client/package.json
@@ -10,6 +10,8 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-devkit/architect": "^0.1202.11",
+    "@angular-devkit/core": "^12.2.11",
     "@angular/animations": "~12.1.0-",
     "@angular/common": "~12.1.0-",
     "@angular/compiler": "~12.1.0-",
@@ -23,8 +25,8 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~12.1.3",
-    "@angular/cli": "~12.1.3",
+    "@angular-devkit/build-angular": "^12.2.11",
+    "@angular/cli": "^12.2.11",
     "@angular/compiler-cli": "~12.1.0-",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
