--- a/packages/admin-client/package.json
+++ b/packages/admin-client/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
+    "go": "SET NODE_OPTIONS=--openssl-legacy-provider && npm run start",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
