--- a/packages/public-client/package.json
+++ b/packages/public-client/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --port=4201",
+    "go": "SET NODE_OPTIONS=--openssl-legacy-provider && ng serve --port=4201",
+    "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
