--- a/packages/admin-client/package.json
+++ b/packages/admin-client/package.json
@@ -33,6 +33,7 @@
     "@angular/compiler-cli": "~12.1.0-",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
+    "concurrently": "^6.3.0",
     "firebase-tools": "^8.0.0 || ^9.0.0",
     "fuzzy": "^0.1.3",
     "inquirer": "^6.2.2",
