--- a/packages/admin-client/package.json
+++ b/packages/admin-client/package.json
@@ -19,13 +19,13 @@
     "@angular/platform-browser": "~12.1.0-",
     "@angular/platform-browser-dynamic": "~12.1.0-",
     "@angular/router": "~12.1.0-",
+    "@apollo/client": "^3.4.16",
     "apollo-angular": "^2.6.0",
     "firebase": "^7.0 || ^8.0",
+    "graphql": "^15.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
-    "zone.js": "~0.11.4",
-    "@apollo/client": "^3.0.0",
-    "graphql": "^15.0.0"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/architect": "^0.1202.11",
@@ -35,6 +35,7 @@
     "@angular/compiler-cli": "~12.1.0-",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
+    "@types/react": "^17.0.34",
     "concurrently": "^6.3.0",
     "firebase-tools": "^8.0.0 || ^9.0.0",
     "fuzzy": "^0.1.3",
