--- a/packages/admin-client/package.json
+++ b/packages/admin-client/package.json
@@ -6,7 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "gql": "graphql-codegen --config codegen.yml"
   },
   "private": true,
   "dependencies": {
@@ -33,6 +34,8 @@
     "@angular-devkit/core": "^12.2.11",
     "@angular/cli": "^12.2.11",
     "@angular/compiler-cli": "~12.1.0-",
+    "@graphql-codegen/cli": "2.3.0",
+    "@graphql-codegen/typescript-apollo-angular": "3.3.1",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
     "@types/react": "^17.0.34",
@@ -49,6 +52,12 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
     "open": "^7.0.3",
-    "typescript": "~4.3.2"
+    "typescript": "~4.3.2",
+    "@graphql-codegen/typescript-operations": "2.2.1",
+    "@graphql-codegen/typescript": "2.4.1",
+    "@graphql-codegen/typescript-graphql-files-modules": "2.1.0",
+    "@graphql-codegen/fragment-matcher": "3.2.0",
+    "@graphql-codegen/typescript-document-nodes": "2.2.1",
+    "@graphql-codegen/introspection": "2.1.0"
   }
 }
