--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "gql_generate": "graphql-codegen --config codegen.yml"
   },
   "dependencies": {
     "apollo-cache-inmemory": "^1.6.6",
@@ -26,6 +27,12 @@
     "react": "^17.0.2"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "^1.9.0",
+    "@graphql-codegen/fragment-matcher": "3.2.0",
+    "@graphql-codegen/introspection": "2.1.0",
+    "@graphql-codegen/typescript": "2.4.1",
+    "@graphql-codegen/typescript-apollo-angular": "3.3.1",
+    "@graphql-codegen/typescript-operations": "2.2.1",
     "apollo-client": "^2.6.10",
     "hasura-cli": "^2.0.9"
   }
