--- a/packages/admin-client/package.json
+++ b/packages/admin-client/package.json
@@ -30,19 +30,17 @@
   },
   "devDependencies": {
     "@angular-devkit/architect": "^0.1202.11",
-    "@angular-devkit/build-angular": "^12.2.11",
+    "@angular-devkit/build-angular": "^13.0.3",
     "@angular-devkit/core": "^12.2.11",
-    "@angular/cli": "^12.2.11",
+    "@angular/cli": "^13.0.3",
     "@angular/compiler-cli": "~12.1.0-",
-    "@graphql-codegen/cli": "2.3.0",
-    "@graphql-codegen/typescript-apollo-angular": "3.3.1",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
     "@types/react": "^17.0.34",
     "concurrently": "^6.3.0",
     "firebase-tools": "^8.0.0 || ^9.0.0",
     "fuzzy": "^0.1.3",
-    "inquirer": "^6.2.2",
+    "inquirer": "^8.2.0",
     "inquirer-autocomplete-prompt": "^1.0.1",
     "jasmine-core": "~3.8.0",
     "jsonc-parser": "^3.0.0",
@@ -52,12 +50,6 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
     "open": "^7.0.3",
-    "typescript": "~4.3.2",
-    "@graphql-codegen/typescript-operations": "2.2.1",
-    "@graphql-codegen/typescript": "2.4.1",
-    "@graphql-codegen/typescript-graphql-files-modules": "2.1.0",
-    "@graphql-codegen/fragment-matcher": "3.2.0",
-    "@graphql-codegen/typescript-document-nodes": "2.2.1",
-    "@graphql-codegen/introspection": "2.1.0"
+    "typescript": "~4.3.2"
   }
 }
