--- a/packages/admin-client/package.json
+++ b/packages/admin-client/package.json
@@ -11,15 +11,15 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~12.1.0-",
-    "@angular/common": "~12.1.0-",
-    "@angular/compiler": "~12.1.0-",
-    "@angular/core": "~12.1.0-",
+    "@angular/animations": "~13.0.2",
+    "@angular/common": "~13.0.2",
+    "@angular/compiler": "~13.0.2",
+    "@angular/core": "~13.0.2",
     "@angular/fire": "^6.1.5",
-    "@angular/forms": "~12.1.0-",
-    "@angular/platform-browser": "~12.1.0-",
-    "@angular/platform-browser-dynamic": "~12.1.0-",
-    "@angular/router": "~12.1.0-",
+    "@angular/forms": "~13.0.2",
+    "@angular/platform-browser": "~13.0.2",
+    "@angular/platform-browser-dynamic": "~13.0.2",
+    "@angular/router": "~13.0.2",
     "@apollo/client": "^3.4.16",
     "apollo-angular": "^2.6.0",
     "firebase": "^7.0 || ^8.0",
@@ -31,9 +31,9 @@
   "devDependencies": {
     "@angular-devkit/architect": "^0.1202.11",
     "@angular-devkit/build-angular": "^13.0.3",
-    "@angular-devkit/core": "^12.2.11",
+    "@angular-devkit/core": "^13.0.0",
     "@angular/cli": "^13.0.3",
-    "@angular/compiler-cli": "~12.1.0-",
+    "@angular/compiler-cli": "~13.0.2",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
     "@types/react": "^17.0.34",
@@ -50,6 +50,6 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
     "open": "^7.0.3",
-    "typescript": "~4.3.2"
+    "typescript": "~4.4.4"
   }
 }
