--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "scripts": {
     "go": "concurrently \"npm run start -w ./packages/admin-client\" \"npm run start -w ./packages/public-client\"",
     "goadmin": "npm run start -w ./packages/admin-client",
+    "gopublic": "npm run start -w ./packages/public-client",
     "wsup": "npm i && npm i -ws",
     "ng": "ng",
     "start": "ng serve",
