--- a/packages/public-client/package.json
+++ b/packages/public-client/package.json
@@ -11,15 +11,14 @@
   "private": true,
   "dependencies": {
     "@angular-devkit/architect": "^0.1202.11",
-    "@angular-devkit/core": "^12.2.11",
-    "@angular/animations": "~12.1.0-",
-    "@angular/common": "~12.1.0-",
-    "@angular/compiler": "~12.1.0-",
-    "@angular/core": "~12.1.0-",
-    "@angular/forms": "~12.1.0-",
-    "@angular/platform-browser": "~12.1.0-",
-    "@angular/platform-browser-dynamic": "~12.1.0-",
-    "@angular/router": "~12.1.0-",
+    "@angular/animations": "~13.1.1",
+    "@angular/common": "~13.1.1",
+    "@angular/compiler": "~13.1.1",
+    "@angular/core": "~13.1.1",
+    "@angular/forms": "~13.1.1",
+    "@angular/platform-browser": "~13.1.1",
+    "@angular/platform-browser-dynamic": "~13.1.1",
+    "@angular/router": "~13.1.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
@@ -37,6 +36,6 @@
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
-    "typescript": "~4.3.2"
+    "typescript": "~4.5.4"
   }
 }
