--- a/packages/admin-client/package.json
+++ b/packages/admin-client/package.json
@@ -7,7 +7,10 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "gql": "graphql-codegen --config codegen.yml"
+    "gql": "graphql-codegen --config codegen.yml",
+    "docs:json": "compodoc -p ./tsconfig.json -e json -d .",
+    "storybook": "npm run docs:json && start-storybook -p 6006",
+    "build-storybook": "npm run docs:json && build-storybook"
   },
   "private": true,
   "dependencies": {
@@ -34,9 +37,20 @@
     "@angular-devkit/core": "^13.1.2",
     "@angular/cli": "^13.1.2",
     "@angular/compiler-cli": "~13.1.1",
+    "@angular/elements": "^13.1.1",
+    "@babel/core": "^7.16.7",
+    "@compodoc/compodoc": "^1.1.16",
+    "@storybook/addon-actions": "^6.5.0-alpha.11",
+    "@storybook/addon-essentials": "^6.5.0-alpha.11",
+    "@storybook/addon-links": "^6.5.0-alpha.11",
+    "@storybook/angular": "^6.5.0-alpha.11",
+    "@storybook/builder-webpack5": "^6.5.0-alpha.11",
+    "@storybook/manager-webpack5": "^6.5.0-alpha.11",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
     "@types/react": "^17.0.34",
+    "@webcomponents/custom-elements": "^1.5.0",
+    "babel-loader": "^8.2.3",
     "concurrently": "^6.3.0",
     "firebase-tools": "^8.0.0 || ^9.0.0",
     "fuzzy": "^0.1.3",
