--- a/package.json
+++ b/package.json
@@ -20,9 +20,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "gql_generate": "graphql-codegen --config codegen.yml",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "gql_generate": "graphql-codegen --config codegen.yml"
   },
   "dependencies": {
     "apollo-cache-inmemory": "^1.6.6",
