--- a/packages/admin-client/package.json
+++ b/packages/admin-client/package.json
@@ -64,6 +64,7 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
     "open": "^7.0.3",
+    "storybook-addon-apollo-client": "^4.0.11",
     "typescript": "~4.4.4"
   }
 }
