--- a/.gitignore
+++ b/.gitignore
@@ -42,11 +42,12 @@ testem.log
 
 # Contain Hasura GQL secret
 apollo.config.js
-codegen.yml
+#codegen.yml
 
 # System Files
 .DS_Store
 Thumbs.db
 
 # environment files
-/src/environments/**
+**/environments/*
+.env
