--- a/package.json
+++ b/package.json
@@ -21,11 +21,16 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "gql_generate": "graphql-codegen --config codegen.yml"
+    "gql_generate": "graphql-codegen --config codegen.yml -r dotenv/config"
   },
   "dependencies": {
+    "@graphql-codegen/graphql-modules-preset": "^2.3.5",
+    "@graphql-codegen/typescript-resolvers": "^2.5.2",
     "apollo-cache-inmemory": "^1.6.6",
     "concurrently": "^6.3.0",
+    "dotenv": "^16.0.0",
+    "graphql": "^15.8.0",
+    "graphql-modules": "^2.0.0",
     "npm": "^8.1.4",
     "react": "^17.0.2"
   },
