WIP get things working again

--- a/packages/admin-client/tsconfig.json
+++ b/packages/admin-client/tsconfig.json
@@ -20,8 +20,11 @@
       "dom",
       "esnext.asynciterable"
     ],
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
   },
+  "include": [
+    "../../generated/graphql/**/*"
+  ],
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
     "strictInjectionParameters": true,
