update firebase and apollo

--- a/packages/admin-client/package.json
+++ b/packages/admin-client/package.json
@@ -18,14 +18,14 @@
     "@angular/common": "~13.2.5",
     "@angular/compiler": "~13.2.5",
     "@angular/core": "~13.2.5",
-    "@angular/fire": "^6.1.5",
+    "@angular/fire": "^7.2.1",
     "@angular/forms": "~13.2.5",
     "@angular/platform-browser": "~13.2.5",
     "@angular/platform-browser-dynamic": "~13.2.5",
     "@angular/router": "~13.2.5",
     "@apollo/client": "^3.4.16",
     "apollo-angular": "^2.6.0",
-    "firebase": "^7.0 || ^8.0",
+    "firebase": "^9.6.8",
     "graphql": "^15.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
