--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "@graphql-codegen/graphql-modules-preset": "^2.3.5",
     "@graphql-codegen/typescript-resolvers": "^2.5.2",
+    "apollo-angular": "^3.0.0",
     "apollo-cache-inmemory": "^1.6.6",
     "concurrently": "^6.3.0",
     "graphql": "^15.8.0",
