--- a/codegen.yml
+++ b/codegen.yml
@@ -11,7 +11,7 @@ generates:
   ./generated/graphql/graphql.ts:
     config:
       serviceProvidedInRoot: false
-      serviceProvidedIn: ./generated/generated.module#GeneratedModule
+      serviceProvidedIn: ../generated.module#GeneratedModule
     schema: ./graphql/schema/client-schema.graphql
     plugins:
       - "typescript"
