--- a/packages/public-client/package.json
+++ b/packages/public-client/package.json
@@ -22,6 +22,8 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "@apollo/client": "^3.5.10",
+    "apollo-angular": "^3.0.0",
     "graphql": "^16.3.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
